--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     
     <color name="dark_gray">#212121</color>
+    <color name="super_dark_gray">#181818</color>
+
     <color name="electric_pink">#FF10F0</color>
     <color name="electric_red">#FF355E</color>
     <color name="electric_green">#57FF00</color>
